# SABRmetrics_CXX

./: .gitignore  CMakeLists.txt  main.cpp
conf/: config.json
include/: functional_tools.h
src/: Baseball.cpp  Baseball.h  DataTable.cpp  DataTable.h  Spahn.cpp  Spahn.h  Teams.cpp  Teams.h  Utility.cpp  Utility.h
